--- a/PECL1/src/main/java/poo/pecl1/Ventana.form
+++ b/PECL1/src/main/java/poo/pecl1/Ventana.form
@@ -220,9 +220,9 @@
                           <Component id="busesCB" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel33" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="pasajerosB" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="pasajerosB" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -581,9 +581,9 @@
                           <Component id="busesCM" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="pasajerosM" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="pasajerosM" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
