--- a/PECL1/src/main/java/poo/pecl1/Ventana.form
+++ b/PECL1/src/main/java/poo/pecl1/Ventana.form
@@ -682,6 +682,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="busesAM">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="busesAMActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="busesCM">
             </Component>
@@ -699,6 +702,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="pasajerosM">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pasajerosMActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
